@@ -1,4 +1,5 @@
 #!/usr/bin/php
+<? dl ("../modules/mms.so"); ?>
 
 mod_mms version <?=mmsversion()?>
 
@@ -11,8 +12,19 @@ define (HOST_NOT_FOUND, 1);
 define (SOCKET_CREATE_FAIL, 2);
 define (CONNECT_FAIL, 3);
 define (MALLOC_ERROR, 4);
+define (ICONV_ERROR, 5);
+define (NONBLOCK_ERROR, 6);
+define (BIND_ERROR, 7);
+define (WRITE_ERROR, 8);
+define (INVALID_URL, 100);
+define (CLOSE_PORT, 101);
+define (C_ETIMEDOUT, 102);
+define (C_ECONNREFUSED, 103);
+define (C_ECONNABORTED, 104);
+define (C_ECONNRESET, 105);
+define (C_ENETRESET, 106);
 define (FILE_NOT_FOUND, 401);
-define (CORRUCPTED_MEDIA, 402);
+define (CORRUPTED_MEDIA, 402);
 define (FILE_WRONG, 403);
 define (NOT_MEDIA, 404);
 define (OTHER_ERROR, 405);
@@ -20,8 +32,10 @@ define (OTHER_ERROR, 405);
 $addr[] = "192.168.0.1";
 $addr[] = "192.168.0.2";
 $addr[] = "192.168.0.3";
-$debug = 0;
+$debug = 1;
 $timeout = 2;
+$sleep = 0;
+$opt = "";
 
 $uri[] = "WMLoad.asf";
 $uri[] = "WMLoad1.asf";
@@ -30,6 +44,7 @@ $uri[] = "WMLoad3.asf";
 $uri[] = "WMLoad4.asf";
 
 echo "MMSCHECKS FUNCTION TEST\n\n";
+
 for ($j=0; $j<count($addr); $j++) {
   for ($i=0; $i<count($uri);$i++) {
     if ( ! $uri[$i] ) $uri[$i] = "/";
@@ -64,11 +79,29 @@ for ($j=0; $j<count($addr); $j++) {
       case BIND_ERROR:
         echo "failed to bind local port";
         break;
+      case WRITE_ERROR:
+        echo "failed to write on socket";
+        break;
       case INVALID_URL:
         echo "{$addr[$j]} is invalid address";
         break;
       case CLOSE_PORT:
         echo "Maybe closed 1755 port on {$addr[$j]}";
+        break;
+      case C_ETIMEDOUT:
+        echo "connect timeout on {$addr[$j]}";
+        break;
+      case C_ECONNREFUSED:
+        echo "connection refused on {$addr[$j]}";
+        break;
+      case C_ECONNABORTED:
+        echo "Connection aborted on {$addr[$j]}";
+        break;
+      case C_ECONNRESET:
+        echo "Connection reset on {$addr[$j]}";
+        break;
+      case C_ENETRESET:
+        echo "Connection aborted by network on {$addr[$j]}";
         break;
       case FILE_NOT_FOUND :
         echo "file not found";
@@ -88,7 +121,7 @@ for ($j=0; $j<count($addr); $j++) {
     }
 
     echo "\n";
-    sleep(1);
+    if ( $sleep ) sleep($sleep);
   }
 }
 echo "\n";
@@ -102,7 +135,7 @@ for ($j=0; $j<count($addr); $j++) {
 
     $url = "mms://{$addr[$j]}{$uri[$i]}{$opt}";
 
-    $ret = mmschecks ($url, $timeout, $debug);
+    $ret = mmscheck ($url, $timeout, $debug);
 
     echo "$url ... ";
 
@@ -111,7 +144,7 @@ for ($j=0; $j<count($addr); $j++) {
         echo "OK";
         break;
       case HOST_NOT_FOUND :
-        echo "{$url} not found";
+        echo "{$addr[$j]} not found";
         break;
       case SOCKET_CREATE_FAIL :
         echo "socket create failed";
@@ -131,11 +164,29 @@ for ($j=0; $j<count($addr); $j++) {
       case BIND_ERROR:
         echo "failed to bind local port";
         break;
+      case WRITE_ERROR:
+        echo "failed to write on socket";
+        break;
       case INVALID_URL:
-        echo "{$url} is invalid address";
+        echo "{$addr[$j]} is invalid address";
         break;
       case CLOSE_PORT:
         echo "Maybe closed 1755 port on {$addr[$j]}";
+        break;
+      case C_ETIMEDOUT:
+        echo "connect timeout on {$addr[$j]}";
+        break;
+      case C_ECONNREFUSED:
+        echo "connection refused on {$addr[$j]}";
+        break;
+      case C_ECONNABORTED:
+        echo "Connection aborted on {$addr[$j]}";
+        break;
+      case C_ECONNRESET:
+        echo "Connection reset on {$addr[$j]}";
+        break;
+      case C_ENETRESET:
+        echo "Connection aborted by network on {$addr[$j]}";
         break;
       case FILE_NOT_FOUND :
         echo "file not found";
@@ -155,7 +206,7 @@ for ($j=0; $j<count($addr); $j++) {
     }
 
     echo "\n";
-    sleep(1);
+    if ( $sleep ) sleep($sleep);
   }
 }
 echo "\n";
