@@ -1,6 +1,10 @@
 PHP MMS Extexsions Changelog
 
 * 0.0.4
+Tue May 23 2004
+  by JoungKyun Kim <http://www.oops.org>
+    - rewirte case of connect failed
+
 Mon May 22 2004
   by JoungKyun Kim <http://www.oops.org>
     - added return code
